fixing backend-test job