@@ -5,13 +5,12 @@ import com.careerpath.model.JobListing;
 import com.careerpath.model.JobSkill;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class JobListingMapper {
     public static JobListingDto toDto(JobListing jobListing, List<JobSkill> jobSkill) {
         List<String> skills = jobSkill.stream()
                 .map(js -> js.getSkill().getName())
-                .collect(Collectors.toList());
+                .toList();
 
         return new JobListingDto(
                 jobListing.getId(),
